# axumazure

./: Cargo.toml  Dockerfile  README.md  deploy.sh
.github/workflows/: azurecr.yml
src/: handlers.rs  main.rs  routes.rs  schemas.rs  utils.rs
