[package]
name = "axumazure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = {version = "0.6.20", features = ["macros"]}
axum-extra = "0.8.0"
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
# -- Env variables
dotenv = "0.15.0"
# -- Third party integrations
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
